--- a/process.html
+++ b/process.html
@@ -4,20 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
     <title></title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
 </head>
 <body>
-    <div style="width: 1000px; height: 500px; float: left;border: solid 1px #CCC" ondrop="drop(event)" ondragover="allowDrop(event)">
-        Components
+    <div style="width: 100%; height: 100%; float: left;border: solid 1px #CCC" ondrop="drop(event)" ondragover="allowDrop(event)">
+        <div style="width: 100%; height: 70px; float: left;border: solid 1px #CCC; margin: 10px;" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <img id="imgActividad" src="img/actividad.png" draggable="true" ondragstart="drag(event)" >
+        </div>
+        <div style="width: 80%; height: 100%; float: left;border: solid 1px #CCC" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <canvas id="workAreaCanvas" ondrop="dropCanvas(event)" width="1024px" height="500px" style="border: solid 1px #CAFAAA"></canvas>
+        </div>
+        <div style="width: 18%; height: 100%; float: left;border: solid 1px #CCC" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <p>Propieadades</p>
 
-        <img id="imgActividad" src="img/actividad.png" draggable="true" ondragstart="drag(event)" >
+            <div id="propiedades">
 
+                <table cellpadding="0" cellspacing="0">
+                    <tr>
+                        <td>Nombre</td>
+                        <td><input id="objectName" type="text"></td>
+                    </tr>
+                </table>
 
-        <canvas id="workAreaCanvas" ondrop="dropCanvas(event)" width="800px" height="400px" style="border: solid 1px #CAFAAA"></canvas>
+                <input id="saveProperties" type="button" value="Save">
+
+            </div>
+
+        </div>
 
     </div>
 
     <script src="js/jquery.js"></script>
     <script src="js/process.js"></script>
+    <script src="js/processModel.js"></script>
     <script src="js/activity.js"></script>
 </body>
 </html>
